@@ -1,10 +1,5 @@
-FROM maven:3.9.10 AS build
-WORKDIR /app
-COPY . .
-RUN mvn clean package -DskipTests
-
 FROM eclipse-temurin:21-jdk
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
